fix text alignment within buttons in chrome

--- a/client/css/main.less
+++ b/client/css/main.less
@@ -166,6 +166,7 @@ button {
     border                      : none;
     color                       : @primary-color;
     display                     : flex;
+    justify-content             : center;
     min-height                  : @leaderboard-circle-diameter;
     overflow                    : hidden;
     padding                     : @default-padding;
